Blender crashes after trying to use the smear brush while Dyntopo is enabled #81932

Closed
opened 2020-10-21 20:16:01 +02:00 by Dan · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-20 21:07, hash: 7167a57197
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes after trying to use the Smear brush while Dyntopo is enabled

Exact steps for others to reproduce the error

  1. enable experimental features
  2. enable dyntopo
  3. select the smear brush
  4. click on the mesh with the selected brush
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 452.06 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-20 21:07, hash: `7167a57197` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes after trying to use the Smear brush while Dyntopo is enabled **Exact steps for others to reproduce the error** 1. enable experimental features 2. enable dyntopo 3. select the smear brush 4. click on the mesh with the selected brush
Author

Added subscriber: @Naionel

Added subscriber: @Naionel
Pablo Dobarro was assigned by Dan 2020-10-21 20:21:05 +02:00

Added subscriber: @coreys

Added subscriber: @coreys

system-info.txt
I'm assuming this string: (7167a57197) appended to the folder name is the build number. Folder/zipped archive name is "blender-2.91.0-7167a57197e9-windows64"

I've tried as well. Same result.
Tried with cube and switching to Sculpt mode, turned on Dyntopo, select smear, click on mesh and crash.
Start new sculpt file, only turned on experimental "Sculpt Vertex Colours" and "Tools with Missing Icons", choose either the paint or the smear brushes, click on mesh and it crashes.

Looks like paint and smear tools are for vertex colours?
No idea if I'm missing something or not.

[system-info.txt](https://archive.blender.org/developer/F9029010/system-info.txt) I'm assuming this string: (7167a57197e9) appended to the folder name is the build number. Folder/zipped archive name is "blender-2.91.0-7167a57197e9-windows64" I've tried as well. Same result. Tried with cube and switching to Sculpt mode, turned on Dyntopo, select smear, click on mesh and crash. Start new sculpt file, only turned on experimental "Sculpt Vertex Colours" and "Tools with Missing Icons", choose either the paint or the smear brushes, click on mesh and it crashes. Looks like paint and smear tools are for vertex colours? No idea if I'm missing something or not.

This issue was referenced by b5169cd230

This issue was referenced by b5169cd2301a021a367fcaee69aa66c262565bb3
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81932
No description provided.